<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.activities.LoginActivity">

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="152dp"
        android:layout_height="128dp"
        android:layout_marginTop="48dp"
        android:layout_marginBottom="15dp"
        app:layout_constraintBottom_toTopOf="@+id/rgTipo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo"
        tools:src="@tools:sample/avatars"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/tvCorreo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:text="@string/valtvcorreo"
        app:layout_constraintBottom_toTopOf="@+id/etCorreo"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etCorreo"
        android:layout_width="295dp"
        android:layout_height="67dp"
        android:layout_marginStart="58dp"
        android:layout_marginEnd="58dp"
        android:layout_marginBottom="28dp"
        android:ems="10"
        android:hint="@string/valetcorreo"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rgTipo" />

    <TextView
        android:id="@+id/tvContra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:text="@string/valtvcontra"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="299dp"
        android:layout_height="85dp"
        android:layout_marginStart="56dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/btnLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etCorreo"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etContra"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/valetcontra"
            android:password="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="187dp"
        android:layout_height="48dp"
        android:layout_marginBottom="8dp"
        android:text="@string/valbtnlogin"
        app:layout_constraintBottom_toTopOf="@+id/btnRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="184dp"
        android:layout_height="51dp"
        android:layout_marginBottom="25dp"
        android:text="@string/valbtnregister"
        app:layout_constraintBottom_toTopOf="@+id/tvVersion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

    <TextView
        android:id="@+id/tvVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="26dp"
        android:text="@string/valtvversion"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRegister" />

    <RadioGroup
        android:id="@+id/rgTipo"
        android:layout_width="293dp"
        android:layout_height="96dp"
        android:layout_marginStart="59dp"
        android:layout_marginEnd="59dp"
        android:layout_marginBottom="33dp"
        app:layout_constraintBottom_toTopOf="@+id/etCorreo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivLogo">

        <RadioButton
            android:id="@+id/rbVol"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/valrbvol" />

        <RadioButton
            android:id="@+id/rbAusp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/valrbausp" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>