<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.activities.RegisterVolActivity">

    <TextView
        android:id="@+id/tvCorreoEleVol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:text="@string/valtvcorreoelevol"
        app:layout_constraintBottom_toTopOf="@+id/etCorreoEleVol"
        app:layout_constraintStart_toStartOf="@+id/etCorreoEleVol"
        app:layout_constraintTop_toBottomOf="@+id/etNombComp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="308dp"
        android:layout_height="77dp"
        android:layout_marginStart="51dp"
        android:layout_marginEnd="51dp"
        android:layout_marginBottom="158dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvContraVol"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etContraAusp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvNombComp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="7dp"
        android:text="@string/valtvnombcomp"
        app:layout_constraintBottom_toTopOf="@+id/etNombComp"
        app:layout_constraintStart_toStartOf="@+id/etNombComp"
        app:layout_constraintTop_toBottomOf="@+id/etNombUsu" />

    <EditText
        android:id="@+id/etNombComp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="51dp"
        android:layout_marginEnd="51dp"
        android:layout_marginBottom="14dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/tvCorreoEleVol"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNombComp"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/tvTelefonoVol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="7dp"
        android:text="@string/valtvtelefonovol"
        app:layout_constraintBottom_toTopOf="@+id/etTelefonoVol"
        app:layout_constraintStart_toStartOf="@+id/etTelefonoVol"
        app:layout_constraintTop_toBottomOf="@+id/etCorreoEleVol" />

    <EditText
        android:id="@+id/etCorreoEleVol"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="52dp"
        android:layout_marginEnd="52dp"
        android:layout_marginBottom="14dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/tvTelefonoVol"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCorreoEleVol"
        tools:ignore="SpeakableTextPresentCheck" />

    <CheckBox
        android:id="@+id/cbTermCondVol"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="16dp"
        android:text="@string/valcbtermcondvol"
        app:layout_constraintBottom_toTopOf="@+id/btnRegistrarVol"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

    <Button
        android:id="@+id/btnRegistrarVol"
        android:layout_width="142dp"
        android:layout_height="0dp"
        android:text="@string/valbtnregistrarvol"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cbTermCondVol" />

    <EditText
        android:id="@+id/etNombUsu"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="52dp"
        android:layout_marginEnd="52dp"
        android:layout_marginBottom="14dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/tvNombComp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNombUsu"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/etTelefonoVol"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="52dp"
        android:layout_marginEnd="52dp"
        android:layout_marginBottom="14dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/tvContraVol"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTelefonoVol"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/tvNombUsu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="7dp"
        android:text="@string/valtvnombusu"
        app:layout_constraintBottom_toTopOf="@+id/etNombUsu"
        app:layout_constraintStart_toStartOf="@+id/etNombUsu"
        app:layout_constraintTop_toBottomOf="@+id/ibRegresar2" />

    <TextView
        android:id="@+id/tvContraVol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="7dp"
        android:text="@string/tvcontravol"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/etTelefonoVol" />

    <ImageButton
        android:id="@+id/ibRegresar2"
        android:layout_width="59dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="15dp"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:src="@drawable/regresar"
        app:layout_constraintBottom_toTopOf="@+id/tvNombUsu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/regresar"
        tools:ignore="SpeakableTextPresentCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>