<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.activities.RegisterAuspActivity">

    <EditText
        android:id="@+id/etCorreoEleAusp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="51dp"
        android:layout_marginEnd="51dp"
        android:layout_marginBottom="15dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/tvTelefonoAusp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCorreoEleAusp"
        tools:ignore="SpeakableTextPresentCheck" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="307dp"
        android:layout_height="74dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="158dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvContraAusp"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etContraAusp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <EditText
        android:id="@+id/etTelefonoAusp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/tvContraAusp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTelefonoAusp"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/tvTelefonoAusp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="7dp"
        android:text="@string/valtvtelefonoausp"
        app:layout_constraintBottom_toTopOf="@+id/etTelefonoAusp"
        app:layout_constraintStart_toStartOf="@+id/etTelefonoAusp"
        app:layout_constraintTop_toBottomOf="@+id/etCorreoEleAusp" />

    <TextView
        android:id="@+id/tvCorreoEleAusp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginBottom="7dp"
        android:text="@string/valtvcorreoeleausp"
        app:layout_constraintBottom_toTopOf="@+id/etCorreoEleAusp"
        app:layout_constraintStart_toStartOf="@+id/etCorreoEleAusp"
        app:layout_constraintTop_toBottomOf="@+id/etNombRepre" />

    <Button
        android:id="@+id/btnRegistrarAusp"
        android:layout_width="142dp"
        android:layout_height="0dp"
        android:text="@string/valbtnregistrarausp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cbTermCondAusp" />

    <EditText
        android:id="@+id/etRazSoc"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="15dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/tvNombRepre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvRazSoc"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/tvNombRepre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="7dp"
        android:text="@string/valtvnombrepre"
        app:layout_constraintBottom_toTopOf="@+id/etNombRepre"
        app:layout_constraintStart_toStartOf="@+id/etNombRepre"
        app:layout_constraintTop_toBottomOf="@+id/etRazSoc" />

    <EditText
        android:id="@+id/etNombRepre"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="12dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/tvCorreoEleAusp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNombRepre"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/tvContraAusp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="7dp"
        android:text="@string/valtvcontraausp"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/etTelefonoAusp" />

    <ImageButton
        android:id="@+id/ibRegresar3"
        android:layout_width="59dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="20dp"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:src="@drawable/regresar"
        app:layout_constraintBottom_toTopOf="@+id/tvRazSoc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/regresar"
        tools:ignore="SpeakableTextPresentCheck" />

    <CheckBox
        android:id="@+id/cbTermCondAusp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="17dp"
        android:text="@string/valcbtermcondausp"
        app:layout_constraintBottom_toTopOf="@+id/btnRegistrarAusp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

    <TextView
        android:id="@+id/tvRazSoc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="7dp"
        android:text="@string/valtvrazsoc"
        app:layout_constraintBottom_toTopOf="@+id/etRazSoc"
        app:layout_constraintStart_toStartOf="@+id/etRazSoc"
        app:layout_constraintTop_toBottomOf="@+id/ibRegresar3" />
</androidx.constraintlayout.widget.ConstraintLayout>