<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.activities.ChooseActivity">

    <ImageButton
        android:id="@+id/ibEscVol"
        android:layout_width="185dp"
        android:layout_height="190dp"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="148dp"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:src="@drawable/adduser"
        app:layout_constraintBottom_toTopOf="@+id/tvEscAusp"
        app:layout_constraintEnd_toStartOf="@+id/tvEscVol"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvElige"
        app:srcCompat="@drawable/adduser"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/ibEscAusp"
        android:layout_width="193dp"
        android:layout_height="183dp"
        android:layout_marginEnd="34dp"
        android:layout_marginBottom="80dp"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:src="@drawable/company"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvEscAusp"
        app:layout_constraintTop_toBottomOf="@+id/tvEscVol"
        app:srcCompat="@drawable/company"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/tvEscVol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="74dp"
        android:layout_marginBottom="140dp"
        android:text="@string/valtvescvol"
        app:layout_constraintBottom_toTopOf="@+id/ibEscAusp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ibEscVol"
        app:layout_constraintTop_toBottomOf="@+id/tvElige" />

    <TextView
        android:id="@+id/tvEscAusp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="130dp"
        android:text="@string/valtvescausp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ibEscAusp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ibEscVol" />

    <TextView
        android:id="@+id/tvElige"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="98dp"
        android:layout_marginBottom="110dp"
        android:text="@string/valtvelige"
        app:layout_constraintBottom_toTopOf="@+id/tvEscVol"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/ibRegresar1"
        android:layout_width="58dp"
        android:layout_height="59dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="337dp"
        android:layout_marginBottom="32dp"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:src="@drawable/regresar"
        app:layout_constraintBottom_toTopOf="@+id/tvElige"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/regresar"
        tools:ignore="SpeakableTextPresentCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>